# customer_statement

./: MANIFEST.in  README.md  apps.txt  pyproject.toml  setyup.py
customer_statement/: hooks.py  modules.txt
customer_statement/custom/: customer_statement_client_script.json
customer_statement/customer_statement/report/customer_statement/: customer_statement.json  customer_statement.py
customer_statement/public/js/: customer_statement.js  customer_statement_client.js
customer_statement/report/: customer_statement.json  customer_statement.py
customer_statement/workspace/: accounting.json
