[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "customer_statement"
version = "0.0.1"
description = "Accounting Customer Statement Report"
authors = [
  { name="SurgiShop", email="gary.starr@surgishop.com" }
]
dependencies = [
  "frappe>=15"
]
readme = "README.md"
license = { text = "MIT" }
